# micrograd

./: CMakeLists.txt  README.md  env.sh
backend/cpu/: ops.cpp  ops.h
backend/cuda/: ops.cu  ops.cuh
backend/cudnn/: ops.cu  ops.cuh
micrograd/: __init__.py  engine.py
test/: test_device.py
